--- a/.config/uwsgi/mysite.ini
+++ b/.config/uwsgi/mysite.ini
@@ -1,5 +1,5 @@
 [uwsgi]
-chdir = /srv/django-deploy-test/
+chdir = /srv/django-deployt/
 module = mysite.wsgi:application
 home = /home/djangoadmin/myvenv/
 
