--- a/.config/uwsgi/mysite.ini
+++ b/.config/uwsgi/mysite.ini
@@ -1,6 +1,6 @@
 [uwsgi]
 chdir = /srv/django-deployt/
-module = mysite.wsgi:application
+module = djangoadmin.wsgi:application
 home = /home/djangoadmin/myvenv/
 
 uid = djangoadmin
