nginx configuration update

--- a/.config/uwsgi/mysite.ini
+++ b/.config/uwsgi/mysite.ini
@@ -6,7 +6,9 @@ home = /home/djangoadmin/myvenv/
 uid = djangoadmin
 gid = djangoadmin
 
-http = :8080
+socket = /tmp/mysite.sock
+chmod-socket = 666
+chown-socket = djangoadmin:djangoadmin
 
 enable-threads = true
 master = true
