--- a/.config/uwsgi/mysite.ini
+++ b/.config/uwsgi/mysite.ini
@@ -1,7 +1,7 @@
 [uwsgi]
-chdir = /srv/django-deployt/
-module = djangoadmin.wsgi:application
-home = /home/djangoadmin/myvenv/
+chdir = /srv/django-deploy/
+module = mysite.wsgi:application
+home = /home/djangoadmin/myenv/
 
 uid = djangoadmin
 gid = djangoadmin
